--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -13,7 +13,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build 7bbd534dfad8da0a8420b10c8106612d2610ae35)\n"
+"X-Generator: Launchpad (build d8a8b6effe4eae83e8bb5babdb93ddb4ac4f09e0)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr ""
@@ -827,6 +827,22 @@ msgstr "O livro não tem o marcador para o nome do livro curto:"
 msgid "The following marker belongs in chapter 0:"
 msgstr "O seguinte marcador pertence ao capítulo 0:"
 
+msgid "Empty figure source:"
+msgstr ""
+
+msgid "Could not find Bible image:"
+msgstr ""
+
+msgid "Unusual quotation mark found:"
+msgstr ""
+
+msgid ""
+"Opening markup is followed by closing markup without intervening text:"
+msgstr ""
+
+msgid "This sequence in the note does not look right:"
+msgstr ""
+
 msgid "Sentence Structure"
 msgstr "Estrutura de sentença"
 
@@ -923,6 +939,12 @@ msgstr "Espaço antes de um ponto de exclamação"
 
 msgid "Space at the end of the verse"
 msgstr "Espaço no final do versículo"
+
+msgid "Space before final note markup"
+msgstr ""
+
+msgid "Space before final cross reference markup"
+msgstr ""
 
 msgid "Checks"
 msgstr "Verificações"
@@ -1047,9 +1069,6 @@ msgstr "Não é possível atualizar: precisa de Unicode"
 msgid "Edit verse"
 msgstr "Editar verso"
 
-msgid "Select which Bible to open in the editor"
-msgstr "Selecione qual Bíblia abrir no editor"
-
 msgid "Editor and Resources"
 msgstr "Editor e Recursos"
 
@@ -1119,9 +1138,6 @@ msgstr "Consulte a ajuda abaixo para obter informações sobre o que inserir"
 msgid "Workspace"
 msgstr "Área de trabalho"
 
-msgid "Select which Bible to read"
-msgstr "Selecione qual Bíblia irá ler"
-
 msgid "Bibledit"
 msgstr "Bibledit"
 
@@ -1143,20 +1159,38 @@ msgstr "Endereço de e-mail:"
 msgid "The following email was sent to this user:"
 msgstr "O seguinte e-mail foi enviado para este usuário:"
 
-msgid "Select chapter"
-msgstr "Selecione o capítulo"
+msgid "Back"
+msgstr ""
 
-msgid "cancel"
-msgstr "cancelar"
+msgid "Forward"
+msgstr ""
 
 msgid "Select book"
 msgstr "Selecione o livro"
 
+msgid "Select chapter"
+msgstr "Selecione o capítulo"
+
+msgid "Go to previous verse"
+msgstr ""
+
 msgid "Select verse"
 msgstr "Selecione o versículo"
 
+msgid "Go to next verse"
+msgstr ""
+
+msgid "cancel"
+msgstr "cancelar"
+
 msgid "Enter passage to go to"
 msgstr "Coloque a passagem que quer acessar"
+
+msgid "History back"
+msgstr ""
+
+msgid "History forward"
+msgstr ""
 
 msgid "Copying Bible from Bibledit to a Paratext project."
 msgstr "Copiar a Bíblia de Bibledit para um projeto Paratexto."
@@ -1562,6 +1596,9 @@ msgstr "começa a capa"
 msgid "starts spine"
 msgstr "começa a coluna"
 
+msgid "starts general peripheral content"
+msgstr ""
+
 msgid "starts a new row"
 msgstr "começa uma nova linha"
 
@@ -1755,9 +1792,6 @@ msgstr ""
 "Este é o recuo da primeira linha do parágrafo. O valor a ser inserido é "
 "apenas um número, por exemplo, 0."
 
-msgid "Please specify a new color"
-msgstr "Especifique uma nova cor"
-
 msgid "Would you like to change the numbering of the note?"
 msgstr "Gostaria de alterar a numeração da nota?"
 
@@ -1804,10 +1838,8 @@ msgstr ""
 msgid "Please enter a marker at which the endnotes should be dumped"
 msgstr "Insira um marcador no qual as notas finais devem ser despejadas"
 
-msgid "The marker is to be given without the backslash, e.g. \"zendnotes\"."
+msgid "(The marker is to be given without the backslash, e.g. "
 msgstr ""
-"O marcador deve ser fornecido sem a barra invertida, por exemplo, "
-"\"zendnotes\"."
 
 msgid "Styles"
 msgstr "Estilos"
@@ -1910,17 +1942,8 @@ msgstr "Inilah hasil terjemahan Saudara:"
 msgid ": "
 msgstr ": "
 
-msgid "Set the language for Bibledit"
-msgstr "Defina o idioma do Bibledit"
-
-msgid "Incorrect font size in percents"
-msgstr "Tamanho de fonte incorreto em porcentagens"
-
 msgid "System"
 msgstr "Sistema"
-
-msgid "Please enter a font size between 50 and 300 percent"
-msgstr "Insira um tamanho de fonte entre 50 e 300%"
 
 msgid "none"
 msgstr "nenhum"
@@ -2521,6 +2544,9 @@ msgstr "Repositório de rede segura"
 msgid "General font size for the interface"
 msgstr "Tamanho de fonte geral para a interface"
 
+msgid "Please enter a font size between 50 and 300 percent"
+msgstr "Insira um tamanho de fonte entre 50 e 300%"
+
 msgid "Size throughout the interface."
 msgstr "Tamanho em toda a interface."
 
@@ -2761,6 +2787,15 @@ msgid "Bibledit always sends the focused verse reference to Accordance."
 msgstr ""
 "O Bibledit sempre envia a referência do versículo em foco para a Accordance."
 
+msgid "Visit alkitabkita.info for more information."
+msgstr ""
+
+msgid "Date format in consultation notes"
+msgstr ""
+
+msgid "The date format to use for consultation notes?"
+msgstr ""
+
 msgid "Send / Receive"
 msgstr "Enviar / receber"
 
@@ -2792,18 +2827,23 @@ msgid "It receives updates from Bibledit Cloud."
 msgstr "Ele recebe atualizações da Bibledit Cloud."
 
 msgid ""
-"The Paratext bridge sends changes from Bibledit to Paratext on this computer."
+"The Paratext bridge can send changes from Bibledit to Paratext on this "
+"computer."
 msgstr ""
-"A ponte Paratext envia alterações do Bibledit para o Paratext neste "
-"computador."
 
-msgid "Bibledit receives updates from Paratext."
+msgid "Bibledit can receive updates from Paratext."
 msgstr ""
 
 msgid "The following Bibles link to a Paratext project:"
 msgstr ""
 
-msgid "Synchronize with Paratext now."
+msgid "Merge the changes in Paratext and in Bibledit now."
+msgstr ""
+
+msgid "Copy the changes in Bibledit to Paratext now."
+msgstr ""
+
+msgid "Copy the changes in Paratext to Bibledit now."
 msgstr ""
 
 msgid "Do not synchronize with Paratext while Paratext is running."
@@ -3200,6 +3240,9 @@ msgstr ""
 "um espaço antes de uma vírgula, ponto e vírgula, dois pontos, ponto final, "
 "ponto de interrogação ou ponto de exclamação"
 
+msgid "a space before a final note or cross reference marker"
+msgstr ""
+
 msgid "sentence structure"
 msgstr "estrutura de sentença"
 
@@ -3217,8 +3260,8 @@ msgstr ""
 "número correto de capítulos e versículos em livros existentes de acordo com "
 "o sistema de versificação"
 
-msgid "well formed USFM"
-msgstr "USFM bem formado"
+msgid "well-formed USFM"
+msgstr ""
 
 msgid "missing punctuation at the end of a verse"
 msgstr "falta de pontuação no final de um versículo"
@@ -3966,6 +4009,9 @@ msgstr ""
 "Receber correspondência diária com o número de notificações de alterações "
 "online que aguardam a minha atenção."
 
+msgid "Get notifications of changes made by anyone in these Bibles:"
+msgstr ""
+
 msgid "Text Checks"
 msgstr "Verificações de texto"
 
@@ -4140,8 +4186,17 @@ msgstr ""
 "Pesquise por versículos com a maioria dos números de Strong semelhantes ao "
 "versículo em foco em:"
 
-msgid "Current book"
-msgstr "Livro atual"
+msgid "all books"
+msgstr ""
+
+msgid "current book"
+msgstr ""
+
+msgid "Old Testament"
+msgstr ""
+
+msgid "New Testament"
+msgstr ""
 
 msgid "What to do with the search results"
 msgstr "O que fazer com os resultados da pesquisa"
@@ -4430,9 +4485,6 @@ msgstr ""
 msgid "Number of emails still to be sent:"
 msgstr ""
 
-msgid "Visit alkitabkita.info for more information."
-msgstr ""
-
 msgid "Create new"
 msgstr ""
 
@@ -4679,6 +4731,9 @@ msgid "Select the user to unassign the notes from"
 msgstr ""
 
 msgid "Back to notes list"
+msgstr ""
+
+msgid "Passage"
 msgstr ""
 
 msgid "Edit the note content"
@@ -4955,6 +5010,14 @@ msgstr ""
 msgid "Font:"
 msgstr ""
 
+msgid "Use automatic note callers instead of fixed ones."
+msgstr ""
+
+msgid ""
+"This enables the OpenDocument editor to restart the note callers on for "
+"example every page."
+msgstr ""
+
 msgid "Info document"
 msgstr ""
 
@@ -5073,12 +5136,6 @@ msgstr ""
 msgid "Toggle the modification privileges for entire Testaments"
 msgstr ""
 
-msgid "Old Testament"
-msgstr ""
-
-msgid "New Testament"
-msgstr ""
-
 msgid "Neural Machine Translation"
 msgstr ""
 
@@ -5108,7 +5165,7 @@ msgstr ""
 msgid "Original language texts"
 msgstr ""
 
-msgid "Bibles (translations)"
+msgid "Bibles and notes"
 msgstr ""
 
 msgid "Lexicons"
@@ -7036,7 +7093,7 @@ msgstr ""
 msgid "Bibledit software"
 msgstr ""
 
-msgid "Copyright (©) 2003-2021 Teus Benschop."
+msgid "Copyright (©) 2003-2022 Teus Benschop."
 msgstr ""
 
 msgid ""
@@ -7141,7 +7198,7 @@ msgstr ""
 msgid "Install Bibledit via the App Store."
 msgstr ""
 
-msgid "This works on an iPad or an iPhone running iOS 8 or higher."
+msgid "This works on an iPad or an iPhone running iOS 12 or higher."
 msgstr ""
 
 msgid "Hint."
@@ -7563,7 +7620,7 @@ msgstr ""
 msgid "Print."
 msgstr ""
 
-msgid "Go to the Bible editor selector."
+msgid "Cycle through the available Bible editors."
 msgstr ""
 
 msgid "Scrum-based Translation"
@@ -9300,9 +9357,6 @@ msgstr ""
 msgid "If you would like this assistance, post a message to:"
 msgstr ""
 
-msgid "Or use the contact form at the website:"
-msgstr ""
-
 msgid "OpenLDAP"
 msgstr ""
 
@@ -9344,7 +9398,19 @@ msgstr ""
 msgid "This assumes a standard installation of the operating system."
 msgstr ""
 
-msgid "Download Bibledit from the App Store."
+msgid "Install Bibledit from the App Store."
+msgstr ""
+
+msgid "Download Bibledit.zip from"
+msgstr ""
+
+msgid "Unpack it."
+msgstr ""
+
+msgid "But most likely macOS will already have done this for you."
+msgstr ""
+
+msgid "Drag Bibledit to the Applications folder."
 msgstr ""
 
 msgid "Start it from the Applications."
@@ -9616,6 +9682,9 @@ msgstr ""
 msgid "The Navigator shows two arrows:"
 msgstr ""
 
+msgid "Clicking"
+msgstr ""
+
 msgid "goes back in the navigation history."
 msgstr ""
 
@@ -9623,6 +9692,9 @@ msgid "goes forward in the navigation history."
 msgstr ""
 
 msgid "There are also keyboard shortcuts for it."
+msgstr ""
+
+msgid "A long click on any of these two arrows brings up the history menu."
 msgstr ""
 
 msgid "Some pages display one or more clickable passages."
@@ -10970,8 +11042,14 @@ msgid "Target references added text"
 msgstr ""
 
 msgid ""
-"Used for marking text which should be ignored when identifying or linking to "
-"cross reference target references."
+"Used for marking text added to the target references. This text should be "
+"ignored when identifying or linking to cross reference target references."
+msgstr ""
+
+msgid "Peripheral"
+msgstr ""
+
+msgid "Divisions for peripheral content."
 msgstr ""
 
 msgid "Genesis"
@@ -11941,6 +12019,9 @@ msgstr ""
 msgid "Received from client"
 msgstr ""
 
+msgid "Mail generated by a Bibledit client at IP address"
+msgstr ""
+
 msgid "whole Bible"
 msgstr ""
 
@@ -12123,6 +12204,9 @@ msgstr ""
 
 msgid "Please enter the link for the divider"
 msgstr ""
+
+msgid "Please specify a new color"
+msgstr "Especifique uma nova cor"
 
 msgid "Please enter a name for the new comparative resource"
 msgstr ""
