--- a/AUTHORS
+++ b/AUTHORS
@@ -9,7 +9,7 @@ Aranggi Toar:
                      css/editor.css; css/stylesheet.css; css/touch.css;
                      database/config/user.h; database/config/user.cpp;
                      edit/index.cpp; edit/index.html; edit/index.js;
-                     editone2/index.cpp; editone2/index.html; editone2/index.js;
+                     editone/index.cpp; editone/index.html; editone/index.js;
                      editusfm/index.cpp; editusfm/index.html;
                      filter/css.cpp; filter/css.h; filter/url.cpp;
                      index/index.html;
